# AdventOfCode2025

./: Cargo.toml  README.md
.github/workflows/: rust.yml
day-01/: Cargo.toml
day-01/benches/: benchmarks.rs
day-01/src/: lib.rs  part1.rs  part2.rs
day-02/: Cargo.toml
day-02/benches/: benchmarks.rs
day-02/src/: main.rs  part1.rs  part2.rs
day-03/: Cargo.toml  example.txt
day-03/benches/: benchmarks.rs
day-03/src/: main.rs  part1.rs  part2.rs
day-04/: Cargo.toml
day-04/benches/: benchmarks.rs
day-04/src/: main.rs  part1.rs  part2.rs
day-05/: Cargo.toml
day-05/benches/: benchmarks.rs
day-05/src/: lib.rs  main.rs  part1.rs  part2.rs
day-06/: Cargo.toml
day-06/benches/: benchmarks.rs
day-06/src/: lib.rs  main.rs  part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: benchmarks.rs
day-07/src/: main.rs  part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks.rs
day-08/src/: main.rs  part1.rs  part2.rs
day-09/: Cargo.toml  input.txt
day-09/benches/: benchmarks.rs
day-09/src/: main.rs  part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: benchmarks.rs
day-10/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs
day-11/: Cargo.toml
day-11/benches/: benchmarks.rs
day-11/src/: main.rs  part1.rs  part2.rs
day-12/: Cargo.toml
day-12/benches/: benchmarks.rs
day-12/src/: lib.rs  main.rs  parser.rs  part1.rs
template/: Cargo.toml  README.md
template/src/: main.rs
