[package]
name = "day-10"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
microlp = "0.2.11"
chumsky.workspace = true
[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "day-10-bench"
path = "benches/benchmarks.rs"
harness = false
